--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <meta name="description" content="Organo Foods, do campo à sua mesa!">
+    <meta property="og:title" content="Organo Foods"">
+    <meta property="og:description" content="Organo Foods, do campo à sua mesa!">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Organo Foods">
+    <meta property="og:image" content="https://i.ibb.co/XWthVY7/Organo-Foods-2.png">
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -12,7 +18,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Orgâno Foods</title>
+    <title>Organo Foods</title>
     <link rel="icon" type="image/png" href="imgs/OrganoIcon.png">
 
   </head>
@@ -71,7 +77,7 @@
     </section>
 
     <section id="about">
-      <div class="container">
+      <div class="container-about">
         <h2>Quem Somos</h2>
         <p>
           Organo Foods é mais do que uma simples empresa; somos uma ponte entre
