--- a/index.html
+++ b/index.html
@@ -62,7 +62,24 @@
         </div>
       </div>
     </section>
-
+    <section class="products">
+      <div class="product">
+        <i class="fa-solid fa-seedling icone-hero"></i>
+        <h2>Orgânicos</h2>
+      </div>
+      <div class="product">
+        <i class="fa-solid fa-carrot icone-hero"></i>
+        <h2>Frutas, Verduras e Vegetais</h2>
+      </div>
+      <div class="product">
+        <i class="fa-solid fa-tractor icone-hero"></i>
+        <h2>Agroindústrias</h2>
+      </div>
+      <div class="product">
+        <i class="fa-solid fa-cow icone-hero"></i>
+        <h2>Laticínios e Embutidos</h2>
+      </div>
+    </section>
     <section id="about">
       <div class="container-about">
         <h2>Quem Somos</h2>
