--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
       </div>
       <div class="product">
         <i class="fa-solid fa-carrot icone-hero"></i>
-        <h2>Frutas, Verduras e Vegetais</h2>
+        <h2>Hortifruti</h2>
       </div>
       <div class="product">
         <i class="fa-solid fa-tractor icone-hero"></i>
-        <h2>Agroindústrias</h2>
+        <h2>Mercearia</h2>
       </div>
       <div class="product">
         <i class="fa-solid fa-cow icone-hero"></i>
-        <h2>Laticínios e Embutidos</h2>
+        <h2>Produtores</h2>
       </div>
     </section>
     <section id="about">
