--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/png" href="imgs/OrganoIcon.png" />
     <title>Organo Foods</title>
+    <meta name="google-site-verification" content="PqG-nXOW11c8FjOzDVs1R9X0_qiYnrbgi-4OKQe2Yc8" />
   </head>
   <body>
     <header>
