--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/png" href="imgs/OrganoIcon.png" />
     <title>Organo Foods</title>
-    <meta name="google-site-verification" content="PqG-nXOW11c8FjOzDVs1R9X0_qiYnrbgi-4OKQe2Yc8" />
+    <meta
+      name="google-site-verification"
+      content="PqG-nXOW11c8FjOzDVs1R9X0_qiYnrbgi-4OKQe2Yc8"
+    />
   </head>
   <body>
     <header>
@@ -59,7 +62,7 @@
             Oferecemos produtos frescos e naturais, cultivados com respeito ao
             meio ambiente.
           </p>
-          <a href="#contact" class="cta-button">Comece aqui</a>
+          <a href="secaoPedidos/pedido.html" class="cta-button">Comece aqui</a>
         </div>
       </div>
     </section>
