--- a/secaoPedidos/pedido.html
+++ b/secaoPedidos/pedido.html
@@ -85,17 +85,17 @@
           <div class="col-md-4">
             <div class="product-card">
               <img src="https://via.placeholder.com/350x150" alt="Produto 1" />
-              <h5>Produto 1</h5>
+              <h5>Kit Essencial</h5>
               <p>
-                Descrição breve do Produto 1. Um produto de alta qualidade com
-                excelentes características.
+                Ideal para quem busca qualidade e praticidade em um único
+                pacote.
               </p>
               <h5>Conteudos:</h5>
-              <li>X Legumes</li>
-              <li>X Vegetais</li>
-              <li>X Mandioca</li>
-              <li>X Suco</li>
-              <strong><div class="price">R$ 99,90</div></strong>
+              <li>1 Tempero</li>
+              <li>1 Verdura</li>
+              <li>1 Legume</li>
+              <li>1 Fruta</li>
+              <strong><div class="price">R$ 25,00</div></strong>
               <button
                 class="btn btn-primary btn-block select-product"
                 data-product="Produto 1"
@@ -107,17 +107,17 @@
           <div class="col-md-4">
             <div class="product-card">
               <img src="https://via.placeholder.com/350x150" alt="Produto 2" />
-              <h5>Produto 2</h5>
+              <h5>Kit Avançado</h5>
               <p>
-                Descrição breve do Produto 2. Um produto excepcional com
-                recursos inovadores.
+                Perfeito para quem deseja um toque a mais de inovação na
+                cozinha.
               </p>
               <h5>Conteudos:</h5>
-              <li>X Legumes</li>
-              <li>X Vegetais</li>
-              <li>X Mandioca</li>
-              <li>X Suco</li>
-              <strong><div class="price">R$ 149,90</div></strong>
+              <li>1 Tempero</li>
+              <li>3 Verdura</li>
+              <li>2 Legume</li>
+              <li>1 Fruta</li>
+              <strong><div class="price">R$ 40,00</div></strong>
               <button
                 class="btn btn-primary btn-block select-product"
                 data-product="Produto 2"
@@ -129,17 +129,64 @@
           <div class="col-md-4">
             <div class="product-card">
               <img src="https://via.placeholder.com/350x150" alt="Produto 3" />
-              <h5>Produto 3</h5>
+              <h5>Kit Premium</h5>
               <p>
-                Descrição breve do Produto 3. Um produto que combina estilo e
-                funcionalidade.
+                Combina estilo e funcionalidade, proporcionando uma experiência
+                culinária superior.
               </p>
               <h5>Conteudos:</h5>
-              <li>X Legumes</li>
-              <li>X Vegetais</li>
-              <li>X Mandioca</li>
-              <li>X Suco</li>
-              <strong><div class="price">R$ 129,90</div></strong>
+              <li>2 Tempero</li>
+              <li>3 Verdura</li>
+              <li>2 Legume</li>
+              <li>1 Fruta</li>
+              <li>1 Tubérculo</li>
+              <strong><div class="price">R$ 55,00</div></strong>
+              <button
+                class="btn btn-primary btn-block select-product"
+                data-product="Produto 3"
+              >
+                <i class="fas fa-check-circle"></i> Selecionar
+              </button>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="product-card">
+              <img src="https://via.placeholder.com/350x150" alt="Produto 3" />
+              <h5>Kit Completo</h5>
+              <p>
+                Oferece uma seleção abrangente de ingredientes para refeições
+                completas.
+              </p>
+              <h5>Conteudos:</h5>
+              <li>2 Tempero</li>
+              <li>4 Verdura</li>
+              <li>2 Legume</li>
+              <li>2 Frutas</li>
+              <li>1 Tubérculo</li>
+              <strong><div class="price">R$ 80,00</div></strong>
+              <button
+                class="btn btn-primary btn-block select-product"
+                data-product="Produto 3"
+              >
+                <i class="fas fa-check-circle"></i> Selecionar
+              </button>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="product-card">
+              <img src="https://via.placeholder.com/350x150" alt="Produto 3" />
+              <h5>Kit Supremo</h5>
+              <p>
+                A escolha definitiva para os amantes da culinária, com a mais
+                alta qualidade e variedade.
+              </p>
+              <h5>Conteudos:</h5>
+              <li>2 Tempero</li>
+              <li>4 Verdura</li>
+              <li>3 Legume</li>
+              <li>3 Fruta</li>
+              <li>2 Tubérculo</li>
+              <strong><div class="price">R$ 100,00</div></strong>
               <button
                 class="btn btn-primary btn-block select-product"
                 data-product="Produto 3"
