--- a/secaoPedidos/pedido.html
+++ b/secaoPedidos/pedido.html
@@ -85,7 +85,7 @@
           <div class="col-md-4">
             <div class="product-card">
               <img src="https://via.placeholder.com/350x150" alt="Produto 1" />
-              <h5>Kit Essencial</h5>
+              <h5>Kit Básico</h5>
               <p>
                 Ideal para quem busca qualidade e praticidade em um único
                 pacote.
@@ -107,7 +107,7 @@
           <div class="col-md-4">
             <div class="product-card">
               <img src="https://via.placeholder.com/350x150" alt="Produto 2" />
-              <h5>Kit Avançado</h5>
+              <h5>Kit Dia a Dia</h5>
               <p>
                 Perfeito para quem deseja um toque a mais de inovação na
                 cozinha.
@@ -129,7 +129,7 @@
           <div class="col-md-4">
             <div class="product-card">
               <img src="https://via.placeholder.com/350x150" alt="Produto 3" />
-              <h5>Kit Premium</h5>
+              <h5>Kit Cheff da Casa</h5>
               <p>
                 Combina estilo e funcionalidade, proporcionando uma experiência
                 culinária superior.
@@ -152,7 +152,7 @@
           <div class="col-md-4">
             <div class="product-card">
               <img src="https://via.placeholder.com/350x150" alt="Produto 3" />
-              <h5>Kit Completo</h5>
+              <h5>Kit Família Feliz</h5>
               <p>
                 Oferece uma seleção abrangente de ingredientes para refeições
                 completas.
@@ -175,7 +175,7 @@
           <div class="col-md-4">
             <div class="product-card">
               <img src="https://via.placeholder.com/350x150" alt="Produto 3" />
-              <h5>Kit Supremo</h5>
+              <h5>Kit Banquete</h5>
               <p>
                 A escolha definitiva para os amantes da culinária, com a mais
                 alta qualidade e variedade.
