--- a/secaoPedidos/pedido.html
+++ b/secaoPedidos/pedido.html
@@ -114,8 +114,8 @@
               </p>
               <h5>Conteudos:</h5>
               <li>1 Tempero</li>
-              <li>3 Verdura</li>
-              <li>2 Legume</li>
+              <li>3 Verduras</li>
+              <li>2 Legumes</li>
               <li>1 Fruta</li>
               <strong><div class="price">R$ 40,00</div></strong>
               <button
@@ -135,11 +135,10 @@
                 culinária superior.
               </p>
               <h5>Conteudos:</h5>
-              <li>2 Tempero</li>
-              <li>3 Verdura</li>
-              <li>2 Legume</li>
+              <li>2 Temperos</li>
+              <li>3 Verduras</li>
+              <li>3 Legumes</li>
               <li>1 Fruta</li>
-              <li>1 Tubérculo</li>
               <strong><div class="price">R$ 55,00</div></strong>
               <button
                 class="btn btn-primary btn-block select-product"
@@ -158,11 +157,11 @@
                 completas.
               </p>
               <h5>Conteudos:</h5>
-              <li>2 Tempero</li>
-              <li>4 Verdura</li>
-              <li>2 Legume</li>
+              <li>2 Temperos</li>
+              <li>4 Verduras</li>
+              <li>3 Legumes</li>
               <li>2 Frutas</li>
-              <li>1 Tubérculo</li>
+              <li>Suco Natural 1L</li>
               <strong><div class="price">R$ 80,00</div></strong>
               <button
                 class="btn btn-primary btn-block select-product"
@@ -181,11 +180,11 @@
                 alta qualidade e variedade.
               </p>
               <h5>Conteudos:</h5>
-              <li>2 Tempero</li>
-              <li>4 Verdura</li>
-              <li>3 Legume</li>
-              <li>3 Fruta</li>
-              <li>2 Tubérculo</li>
+              <li>2 Temperos</li>
+              <li>4 Verduras</li>
+              <li>5 Legumes</li>
+              <li>3 Frutas</li>
+              <li>Suco Natural 1L</li>
               <strong><div class="price">R$ 100,00</div></strong>
               <button
                 class="btn btn-primary btn-block select-product"
