--- a/secaoPedidos/pedido.html
+++ b/secaoPedidos/pedido.html
@@ -92,9 +92,9 @@
               </p>
               <h5>Conteudos:</h5>
               <li>1 Tempero</li>
-              <li>1 Verdura</li>
+              <li>2 Verduras</li>
               <li>1 Legume</li>
-              <li>1 Fruta</li>
+              <!--  <li>1 Fruta</li> -->
               <strong><div class="price">R$ 25,00</div></strong>
               <button
                 class="btn btn-primary btn-block select-product"
@@ -116,7 +116,7 @@
               <li>1 Tempero</li>
               <li>3 Verduras</li>
               <li>2 Legumes</li>
-              <li>1 Fruta</li>
+              <!-- <li>1 Fruta</li> -->
               <strong><div class="price">R$ 40,00</div></strong>
               <button
                 class="btn btn-primary btn-block select-product"
@@ -136,9 +136,9 @@
               </p>
               <h5>Conteudos:</h5>
               <li>2 Temperos</li>
-              <li>3 Verduras</li>
-              <li>3 Legumes</li>
-              <li>1 Fruta</li>
+              <li>5 Verduras</li>
+              <li>2 Legumes</li>
+              <!-- <li>1 Fruta</li> -->
               <strong><div class="price">R$ 55,00</div></strong>
               <button
                 class="btn btn-primary btn-block select-product"
@@ -158,10 +158,10 @@
               </p>
               <h5>Conteudos:</h5>
               <li>2 Temperos</li>
-              <li>4 Verduras</li>
-              <li>3 Legumes</li>
-              <li>2 Frutas</li>
-              <li>Suco Natural 1L</li>
+              <li>8 Verduras</li>
+              <li>4 Legumes</li>
+              <!-- <li>2 Frutas</li>
+              <li>Suco Natural 1L</li> -->
               <strong><div class="price">R$ 80,00</div></strong>
               <button
                 class="btn btn-primary btn-block select-product"
@@ -181,10 +181,10 @@
               </p>
               <h5>Conteudos:</h5>
               <li>2 Temperos</li>
-              <li>4 Verduras</li>
+              <li>9 Verduras</li>
               <li>5 Legumes</li>
-              <li>3 Frutas</li>
-              <li>Suco Natural 1L</li>
+              <!-- <li>3 Frutas</li>
+              <li>Suco Natural 1L</li> -->
               <strong><div class="price">R$ 100,00</div></strong>
               <button
                 class="btn btn-primary btn-block select-product"
